@@ -1,15 +1,15 @@
 package org.example;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class CommunityManager
 {
-
+    private static final Logger LOG = Logger.getLogger(CommunityManager.class.getName());
     private final Map<Long, CommunityUser> members = new ConcurrentHashMap<>();
     private final List<CommunityListener> listeners = new CopyOnWriteArrayList<>();
 
@@ -17,32 +17,40 @@ public class CommunityManager
     {
         listeners.add(listener);
     }
-    public boolean addMember(long telegramId, String firstName, String username)
+    public void removeListener(CommunityListener listener)
     {
-        if (members.containsKey(telegramId))
-        {
-            return false;
-        }
+        listeners.remove(listener);
+    }
+
+    public synchronized boolean addMember(long telegramId, String firstName, String username)
+    {
         CommunityUser user = new CommunityUser(telegramId, firstName, username);
-        CommunityUser previous = members.putIfAbsent(telegramId, user);
-        if (previous != null)
+        if (members.putIfAbsent(telegramId, user) != null)
         {
             return false;
         }
-        notifyMemberAdded(user);
+        notifyMemberAdded(user, members.size());
         return true;
     }
-    private void notifyMemberAdded(CommunityUser user)
+
+    private void notifyMemberAdded(CommunityUser user, int size)
     {
-        int size = getCommunitySize();
         for (CommunityListener listener : listeners)
         {
-            listener.onMemberAdded(user, size);
+            try
+            {
+                listener.onMemberAdded(user, size);
+            }
+            catch (RuntimeException e)
+            {
+                LOG.log(Level.WARNING, "מאזין קהילה נכשל", e);
+            }
         }
     }
+
     public List<CommunityUser> getAllMembers()
     {
-        return Collections.unmodifiableList(new ArrayList<>(members.values()));
+        return List.copyOf(members.values());
     }
     public int getCommunitySize()
     {
